--- a/.babelrc
+++ b/.babelrc
@@ -1,17 +1,23 @@
 {
-  "presets": ["es2015", "stage-0", "react"],
-  "env": {
-      "development": {
-          "plugins": [
-            "transform-runtime",
-            ["react-transform", {
-              "transforms": [{
-                "transform" : "react-transform-hmr",
-                "imports"   : ["react"],
-                "locals"    : ["module"]
-          }]
-        }]
-      ]
+    "presets": ["es2015", "stage-0", "react"],
+    "env": {
+        "development": {
+            "plugins": [
+                "transform-runtime",
+                ["react-transform", {
+                    "transforms": [
+                        {
+                            "transform" : "react-transform-hmr",
+                            "imports"   : ["react"],
+                            "locals"    : ["module"]
+                        },
+                        {
+                            "transform": "react-transform-catch-errors",
+                            "imports": ["react", "redbox-react"]
+                        }
+                    ]
+                }]
+            ]
+        }
     }
-  }
 }
