--- a/package.json
+++ b/package.json
@@ -8,10 +8,7 @@
     "build": "set BABEL_ENV=production && webpack --config webpack.config.pro.js --progress",
     "lint": "eslint scripts"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/minooo/webpack-es6-react.git"
-  },
+
   "keywords": [
     "webpack",
     "es6",
@@ -19,10 +16,7 @@
   ],
   "author": "minooo",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/minooo/webpack-es6-react/issues"
-  },
-  "homepage": "https://github.com/minooo/webpack-es6-react#readme",
+
   "devDependencies": {
     "babel-core": "^6.6.5",
     "babel-eslint": "^5.0.0",
@@ -35,6 +29,8 @@
     "eslint": "^1.10.3",
     "eslint-plugin-babel": "^3.1.0",
     "eslint-plugin-react": "^4.2.1",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "react-transform-catch-errors": "^1.0.2",
     "react-transform-hmr": "^1.0.4",
     "redbox-react": "^1.2.2",
